Fix content flickering when upload modal first loads

--- a/site/css/modal.css
+++ b/site/css/modal.css
@@ -2,6 +2,10 @@
 	position: absolute;
 }
 
+[name="upload_modal"] {
+	position: absolute;
+}
+
 .modal-outer {
 	position: fixed;
 	display: none;
